--- a/electron/clientApp/css/voter-manager.css
+++ b/electron/clientApp/css/voter-manager.css
@@ -9,7 +9,7 @@ html, body {
 
 body {
 	display: flex;
-    flex-direction: column;
+	flex-direction: column;
 }
 
 h1 {
@@ -18,11 +18,29 @@ h1 {
 	margin-right: auto;
 }
 
+#loadingBlock {
+	height: 100%;
+	background-color: lightgreen;
+	font-size: 36pt;
+}
+
+#controls {
+	display:hide;
+	height: 100%;
+	background-color: beige;
+	min-height: 100%;
+   height: auto !important; /* This line and the next line are not necessary unless you need IE6 support */
+   height: 100%;
+   margin: 0 auto -1em; /* the bottom margin is the negative value of the footer's height */
+}
+
 label { font-size: normal; font-variant: small-caps; }
 
 footer {
     border:1px solid green;
     width:100%;
     height:1em;
+	 position:fixed;
+    bottom:0;
 }
 
