--- a/electron/clientApp/css/voter-manager.css
+++ b/electron/clientApp/css/voter-manager.css
@@ -1,13 +1,16 @@
 * {
 	margin: 0;
+  box-sizing: border-box;
 }
 
 html, body {
     padding:0;
+  	 margin: 0;
     height: 100%;
 }
 
 body {
+  background: linear-gradient(45deg, #3949AB, #1E88E5);
 }
 
 h1 {
@@ -65,4 +68,3 @@ footer {
 	 position:fixed;
     bottom:0;
 }
-
