--- a/electron/clientApp/css/voter-manager.css
+++ b/electron/clientApp/css/voter-manager.css
@@ -64,11 +64,12 @@ div.statusElement:nth-child(n+2) {
 	background-color:beige;
 	overflow : auto;
 }
-.walkListDir table {
-   border-collapse: collapse; 
+.addressList {
+    list-style:none;
+    cursor:pointer;
 }
-#walkListBody tr {
-    border-bottom: 1pt solid rgb(170, 50, 220, .6);
+.addressList li:disabled {
+  background-color: #ccc;
 }
 
 .address {
