some code refactoring, cosmetic changes, added tracking fields, got uids from walk list

--- a/electron/clientApp/css/voter-manager.css
+++ b/electron/clientApp/css/voter-manager.css
@@ -61,6 +61,8 @@ div.statusElement:nth-child(n+2) {
 	display:flex;
 }
 .walkSection {
+    width: 65%;
+    position: relative;
 }
 .walkListSource {
 }
